# ML-OPS

./: .gitignore  Makefile  README.md  grpc_server.py  ml_service_pb2.py  ml_service_pb2_grpc.py
.dvc/: .gitignore  config
HW1/: .dockerignore  .env.example  docker-compose.yml  pyproject.toml
HW1/app/api/: __init__.py
HW1/app/api/grpc/: service.py
HW1/app/api/rest/: __init__.py  routes.py
HW1/app/services/: dvc_service.py  minio_service.py
HW1/clearml-config/: hosts.conf
HW1/dashboard/: __init__.py  app.py
HW1/data/: .gitkeep
HW1/docker/: Dockerfile.api
HW1/k8s/: configmap.yaml  secret.yaml
HW1/k8s/api/: deployment.yaml  service.yaml
HW1/k8s/dashboard/: service.yaml
HW1/k8s/minio/: deployment.yaml  job-init.yaml  pvc.yaml  service.yaml
HW1/proto/: ml_service.proto
HW1/scripts/: port-forward-stop.sh
app/: __init__.py  main.py
app/api/grpc/: __init__.py
app/core/: __init__.py  config.py  logging.py
app/schemas/: __init__.py  models.py
app/services/: __init__.py  clearml_service.py  dataset_service.py  model_service.py
clearml-config/: entrypoint.sh
docker/: Dockerfile.dashboard  Dockerfile.grpc
example_data/: sample_dataset.csv
k8s/: kustomization.yaml  namespace.yaml
k8s/api/: pvc.yaml
k8s/dashboard/: deployment.yaml
k8s/grpc/: deployment.yaml  service.yaml
proto/: __init__.py
scripts/: port-forward.sh  update-secret.sh
